--- a/Avalonia86/Views/ctrlWelcome.axaml
+++ b/Avalonia86/Views/ctrlWelcome.axaml
@@ -13,13 +13,11 @@
 			<TextBlock TextWrapping="Wrap">
 				<Run FontSize="16" FontWeight="Bold">Welcome to Avalonia 86</Run>
 				<LineBreak />
-				<Run FontStyle="Italic">Avalonia 86 is based on work by David Simunič and Laci bá'.</Run>
+				<Run FontStyle="Italic">Based on work by David Simunič and Laci bá'.</Run>
 				<LineBreak />
 				<LineBreak />
 				<Run>
-					Code is from a port of Manager to Avalonia, and the look and feel are heavily
-					inspired by WinBox.	No code was taken from WinBox, as it was written in Pascal
-					and GPL licensed. This version of Manager is MIT licensed, same as the original code.
+					This is a front end for 86Box. Note, 86Box now also have a built in manager. 
 				</Run>
 				<LineBreak />
 				<LineBreak />
